# https-everywhere-standalone

./: .gitignore  .gitmodules  Pipfile  README.md  https-everywhere-mitmproxy.py  https-everywhere-mitmproxy.spec  https-everywhere-standalone.py  https-everywhere-standalone.spec  install.sh  mitm.sh  post-mitm.sh.example  pre-mitm.sh.example  requirements-develop.txt  requirements.txt  script.py  version.py
rust/: Cargo.toml
rust/src/: lib.rs
web_ui/: __init__.py
web_ui/static/: index-ui.js  messages.json  style.css  translations.js
web_ui/templates/: index.html  layout.html
