[package]
name = "https-everywhere-standalone-pyo"
version = "0.1.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"

[lib]
name = "https_everywhere_standalone_pyo"
crate-type = ["cdylib"]

[dependencies]
https-everywhere-lib-core = { path = "lib-core" }
pyo3 = { version = "0.11.1", features = ["extension-module"] }
rusqlite = "0.23.1"
simple_logger = "1.0"
url = "2.0"
